Added more to the paragraph

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -531,6 +531,7 @@ game, to inform the player that the game has ended or to inform the player on wh
 
 %==================================================================================================================================
 \chapter{Phase 1 Implementation}
+\label{phase1implementation}
 
 \section{Process}
 \label{process}
@@ -1253,7 +1254,9 @@ Once I had done my analysis on where GPS signals can decrease, I started an iter
 aproach to creating a game. During phase 1 I started by brainstorming ideas for a game and then progressively
 buidling on ideas that were feasible and would work within the time frame required. I decided on creating a
 tag game where a "chaser" would have a real time location of a "runner" unless they were in areas with a high
-error rate. 
+error rate. In chapter \ref{phase1implementation}, I went over the technologies that I used to implement the
+game. I also went over the alterations that I had to make from the design to ensure that the game was an enjoyable
+experience.  
 
 \section{Future Work}
 Due to the limited time that I had to complete the project, there were still some things that I would want to do
