Added some more future work paragraphs

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -304,3 +304,11 @@
    title = {Picking Pockets on the Lawn: The Development of Tactics and Strategies in a Mobile Game},
    year = {2005},
 }
+
+@misc{overwatch,
+   author={{Blizzard Entertainment}},
+   title={Overwatch},
+   howpublished={PC, Xbox One and Playstation 4},
+   publisher = {{Blizzard Entertainment}},
+   year={2016}
+}
