Added another future work paragraph

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1294,6 +1294,11 @@ that into a character ability game, I might look into other ways to improve the 
 idea that I have is to use the median and standard deviation to decide the threshold rather than the minimum
 accuracy times 2.
 
+One final piece of future work that I will consider is by optimizing the game to have more than 2 players. While
+my server does not have any limits in the number of players, my design has only really had 2 players in mind.
+Some ideas of making the game support more players is to turn the game into a last man standing game where
+the number of chasers increase as the game goes on. This would make the game more tense as the runners would 
+be in more danger of being caught as time goes on.
 
 \section{Reflection}
 
