Added some more stuff on seamful design

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -312,3 +312,38 @@
    publisher = {{Blizzard Entertainment}},
    year={2016}
 }
+
+@misc{googleLocation,
+   author={{Google}},
+   title={{How Google uses location information}},
+   url={https://policies.google.com/technologies/location-data?hl=en-US},
+   year={2023},
+   urldate={19-03-2023}
+}
+
+@misc{appleLocation,
+   author={{Apple Inc.}},
+   title={{Location Services and Privacy}},
+   url={https://www.apple.com/legal/privacy/data/en/location-services/},
+   year={2022},
+   month={9},
+   date={12},
+   urldate={19-03-2023}
+}
+
+@inproceedings{brouwers2011detecting,
+  title={Detecting dwelling in urban environments using gps, wifi, and geolocation measurements},
+  author={Brouwers, Niels and Woehrle, Matthias},
+  booktitle={Workshop on Sensing Applications on Mobile Phones (PhoneSense)},
+  pages={1--5},
+  year={2011},
+  organization={Citeseer}
+}
+
+@misc{jetlag,
+   author={{Jet Lag: The Game}},
+   title={We Played a 72 Hour Game of Tag Across Europe [Video]},
+   year={2022},
+   month={9},
+   day={14}
+}
