--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -189,6 +189,12 @@ a phone will be in sight of roughly 15 to 16 satellites rather than the usual 4.
 have a lot more accuracy than in the past as the increase in satellites means that there is less chance of there being big
 errors.
 
+For most modern smartphones, GPS is not the only way that they can get their location data.
+For instance both Apple and Google state in the privacy terms that they source their location from sources such as WiFi and mobile networks on
+top of GNSS systems. \citep{appleLocation, googleLocation}. This is mainly to help improve accuracy when in hard to reach areas
+such as being indoors which can be useful for tracking location history. Another main reason is that sourcing your location entirely from GNSS systems can drain battery life due
+to the calculations needed to find the device's position \citep{brouwers2011detecting}. 
+
 \section{What causes Inaccuracies in GPS Systems}
 In this project we will be looking at making a game based on GPS shadows which are areas where the GPS signal is not as accurate. In this section I will look
 at the various factors that could effect our accuracy.
@@ -241,13 +247,13 @@ glitches in order to prevent cheating.
 While trying to close every seam may be appropriate in some areas, it can sometimes be futile to try and close every seam.
 Seamful design is the idea of embracing the seams in the system. In the context of GPS this usually means to try and embrace
 the idea that GPS accuracy can vary based on the type of phone, the area you are in or the GPS clock error. For example 
-\emph{Can you see me now?} a Mixed Reality game made by Blast Theory noted that while they were getting significant error radiuses they
-were also finding that eventually the players were able to exploit the drops in GPS accuracy in order to catch other players. \citep{canyouseeme}
+\emph{Treasure}, a game made by the University of Glasgow, had a coin collection mechanic where the difficulty of collecting
+a coin varied on how strong their WiFi signal was. \citep{Barkhuus2005}
 
 \section{Previous Work}
 
-Over the years there has been several games that utilise GPS coordinates as a fundamental part of the game. In this section I go over two case
-studies of location games that utilised seamful design.
+Over the years there has been several games that utilise GPS coordinates as a fundamental part of the game. In this section I go over various
+games that used GPS as a core mechanic of the game.
 
 One of the first location games was \emph{Can you see me now? (CYSMN)} which was a mixed reality made by blast theory. \citep{canyouseeme} The
 game was played over a two day. There were three runners that would run around the streets of Sheffield
