Added jet lag paragraph

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -71,9 +71,9 @@
 
 @film{Chase2022,
    author = {Adam Chase and Sam Denby and Ben Doyle},
-   month = {9},
-   publisher = {YouTube},
-   title = {Jet Lag: The Game: We Played a 72 hour game across Europe},
+   month = {September},
+   publisher = {Jet Lag: The Game},
+   title = {We Played a 72 hour game across Europe [Video]},
    url = {https://www.youtube.com/watch?v=q2tJqO6nCSc},
    year = {2022},
 }
