--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -250,7 +250,8 @@ the idea that GPS accuracy can vary based on the type of phone, the area you are
 \emph{Treasure}, a game made by the University of Glasgow, had a coin collection mechanic where the difficulty of collecting
 a coin varied on how strong their WiFi signal was. \citep{Barkhuus2005}
 
-\section{Previous Work}
+\section{Related Products}
+\label{relatedproducts}
 
 Over the years there has been several games that utilise GPS coordinates as a fundamental part of the game. In this section I go over various
 games that used GPS as a core mechanic of the game.
@@ -277,6 +278,12 @@ CYSMN that stated that it was a "shame" that they were caught by a runner withou
 it had increased the stakes of the game. \citep{canyouseeme}. We also saw that in \emph{Treasure} where the players took 
 advantage in the lag between location updates to get away from their victims. When you expose seams to people, there can
 be interesting ways that people exploit those seams to gain an advantage.
+
+Over the years, other creators have used GPS technology to create interesting game ideas. The third season of the popular
+web game show \emph{Jet Lag: The Game} is a prime example of this. The game portrayed in this series was a 72 hour game of
+tag played over the continent of Europe. The players had to get as far as they can towards a set destination. The person
+who came closest wins. One player would try to travel to their destination while being chased by the others using their
+GPS location. \citep{Chase2022}
 
 %==================================================================================================================================
 \chapter{Analysis}
@@ -411,7 +418,8 @@ After going through all of the steps described in section \ref{phase1designproce
 was a simple tag game where a player can take advantage of GPS shadows in order to hide from
 a "chaser" player. The chaser will be able to see the other users locations in real time if the runner is in an area with
 high GPS accuracy. Once a chaser tags a runner, the caught runner becomes the chaser and a 30 second Jail Time is
-triggered. During this time the catcher cannot see the runner's latest location or is able to catch a runner.
+triggered. During this time the catcher cannot see the runner's latest location or is able to catch a runner. I used
+the game portrayed in \emph{Jet Lag: The Game} and the other games described in section \ref{relatedgames} as inspiration \citep{Chase2022}.
 
 The game will have a time limit with the first iteration being 15 minutes. This is so that the game can be quick and
 easy to play during a study break. I also considered the fact that the game would work well in dense urban environments
