Started work on a motivation section

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -347,3 +347,18 @@
    month={9},
    day={14}
 }
+
+@inproceedings{weiser1994,
+author = {Weiser, Mark},
+title = {Creating the Invisible Interface: (Invited Talk)},
+year = {1994},
+isbn = {0897916573},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/192426.192428},
+doi = {10.1145/192426.192428},
+booktitle = {Proceedings of the 7th Annual ACM Symposium on User Interface Software and Technology},
+pages = {1},
+location = {Marina del Rey, California, USA},
+series = {UIST '94}
+}
