Added a motivation section

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -102,6 +102,10 @@ a system, we should design systems to be open about them and even exploit them. 
 created by \cite{Barkhuus2005} took inspiration from \emph{Can you see me now?} and \cite{weiser1994}
 to create a game that exposed differences in WiFi to alter the difficulty of collecting coins.
 
+The ideas of seamful design allow us to play with limitations that we would usually want to fix
+and hide. It further gives us the opportunity to push positioning technologies to the limits. It
+can lead players to think outside the box, leading to more interesting strategies that can make a
+game more fun to play.
 
 \section{Aims}
 
