--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -108,10 +108,26 @@ can lead players to think outside the box, leading to more interesting strategie
 game more fun to play.
 
 \section{Aims}
+One of the main aims of the project is to help teach players about how GPS can decrease in quality. A major
+part of the game design will encourage users to find shadows where their GPS signal will be either weak or
+non-existant. My hope is that over the course of playing this game, they will learn what places they should
+go if they want to have more precise positioning but also what areas they shouldn't get to.
+
+Another aim of the project is to see how GPS accuracy changes with different phones. I developed the game
+for android phones which has a significant range of phones with different specifications. I wanted to 
+see if the differences in specifciatoins would lead to different results of accuracy. To test this I 
+asked for the user's phones before starting my user tests and logged both their accuracy and their noise
+ratio. This led to the aim of optimizing the game to adjust for different ranges in accuracies.
+
+As well as the other two aims. The most important aim was to simply see how GPS and the range of
+error rates could be used to design a fun multiplayer game in a range of locations. I wanted to use
+my newly acquired knowledge of how GPS worked to understand what real-life locations I could use
+to make a game that people would want to play. I wanted to ensure that there was enough features
+to make the game simple to play but hard to master.
 
 \section{Dissertation Outline}
-Through the course of this paper, I will explore the ideas of seamful design,
-game design and GPS accuracy to create a game. This dissertation will go over the 
+Through the course of this paper, I explore the ideas of seamful design,
+game design and GPS accuracy to create a game. This dissertation details the 
 main process, implementation and evaluation of a tag game with GPS shadows as the
 main idea behind the game.
 
@@ -122,74 +138,6 @@ main idea behind the game.
     \item Chapters \ref{phase2design} and \ref{phase2evaluation} cover the improvements and the lessons learned from phase 1. They also cover the design and implementation of the features in phase 2. In chapter \ref{phase2evaluation} I go over the results and process in the second round of evaluations.
     \item Chapter \ref{conclusion} summarises the project and goes over the future work and reflection.
 \end{itemize}
-\section{Guidance}
-
-\textbf{Motivate} first, then state the general problem clearly. 
-
-\section{Writing guidance}
-\subsection{Who is the reader?}
-
-This is the key question for any writing. Your reader:
-
-\begin{itemize}
-    \item
-    is a trained computer scientist: \emph{don't explain basics}.
-    \item
-    has limited time: \emph{keep on topic}.
-    \item
-    has no idea why anyone would want to do this: \emph{motivate clearly}
-    \item
-    might not know \emph{anything} about your project in particular:
-    \emph{explain your project}.
-    \item
-    but might know precise details and check them: \emph{be precise and
-    strive for accuracy.}
-    \item
-    doesn't know or care about you: \emph{personal discussions are
-    irrelevant}.
-\end{itemize}
-
-Remember, you will be marked by your supervisor and one or more members
-of staff. You might also have your project read by a prize-awarding
-committee or possibly a future employer. Bear that in mind.
-
-\subsection{References and style guides}
-There are many style guides on good English writing. You don't need to
-read these, but they will improve how you write.
-
-\begin{itemize}
-    \item
-    \emph{How to write a great research paper} \cite{Pey17} (\textbf{recommended}, even though you aren't writing a research paper)
-    \item
-    \emph{How to Write with Style} \cite{Von80}. Short and easy to read. Available online.
-    \item
-    \emph{Style: The Basics of Clarity and Grace} \cite{Wil09} A very popular modern English style guide.
-    \item
-    \emph{Politics and the English Language} \cite{Orw68}  A famous essay on effective, clear writing in English.
-    \item
-    \emph{The Elements of Style} \cite{StrWhi07} Outdated, and American, but a classic.
-    \item
-    \emph{The Sense of Style} \cite{Pin15} Excellent, though quite in-depth.
-\end{itemize}
-
-\subsubsection{Citation styles}
-
-\begin{itemize}
-\item If you are referring to a reference as a noun, then cite it as: ``\citet{Orw68} discusses the role of language in political thought.''
-\item If you are referring implicitly to references, use: ``There are many good books on writing \citep{Orw68, Wil09, Pin15}.''
-\end{itemize}
-
-There is a complete guide on good citation practice by Peter Coxhead available here: \url{http://www.cs.bham.ac.uk/~pxc/refs/index.html}. 
-If you are unsure about how to cite online sources, please see this guide: \url{https://student.unsw.edu.au/how-do-i-cite-electronic-sources}.
-
-\subsection{Plagiarism warning}
-
-\begin{highlight_title}{WARNING}
-    
-    If you include material from other sources without full and correct attribution, you are commiting plagiarism. The penalties for plagiarism are severe.
-    Quote any included text and cite it correctly. Cite all images, figures, etc. clearly in the caption of the figure.
-\end{highlight_title}
-
 
 %==================================================================================================================================
 \chapter{Background}
