Added more paragraphs on seams

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -362,3 +362,11 @@ pages = {1},
 location = {Marina del Rey, California, USA},
 series = {UIST '94}
 }
+
+@inproceedings{chalmers2003seamful,
+  title={Seamful and seamless design in ubiquitous computing},
+  author={Chalmers, Matthew and MacColl, Ian},
+  booktitle={Workshop at the crossroads: The interaction of HCI and systems issues in UbiComp},
+  volume={8},
+  year={2003}
+}
